# vrlh-power

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  uno.config.ts  vite.config.js
.github/workflows/: release.yml
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: error.rs  events.rs  lib.rs  traits.rs
apps/tauri/src/commands/: discover.rs  mod.rs  power.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  dto.rs  error.rs  events.rs  lib.rs  main.rs  util.rs
src-tauri/src/commands/: discover.rs  mod.rs  power.rs  power_off.rs  power_on.rs
src/lib/: status.svelte.ts
src/lib/icons/: mingcute-license.txt
src/routes/: +layout.svelte  +page.svelte  command.svelte  device.svelte  styles.css
