[package]
name = "vrlh-power-manager"
version = "0.1.0"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrlh_power_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"
thiserror = "2.0.12"
tokio = "1.46.1"
btleplug = { version = "0.11.8", features = ["serde"] }
uuid = "1.17.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
