[package]
name = "vrlh-power-manager"
version = "0.1.0"
authors = ["mass8326"]
edition = "2021"

[lib]
name = "vrlh_power_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"
thiserror = "2.0.12"
tokio = "1.46.1"
btleplug = { version = "0.11.8", features = ["serde"] }
uuid = "1.17.0"
vrlh-power-manager-core = { version = "0.1.0", path = "../../packages/core" }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
match_bool = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
